@@ -51,6 +51,8 @@ sourceSets {
 
 tasks.test {
   useJUnitPlatform()
+  // 允许 java agent 动态代理
+  jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.jar {
